[package]
name = "eth-alive"
version = "0.1.0"
edition = "2024"
description = "A minimalist watchdog for Ethereum node monitoring"
license = "MIT"
repository = "https://github.com/MantissaMr/eth-alive"
keywords = ["ethereum", "node", "rpc"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
tokio = { version = "1", features = ["full"] } 
reqwest = { version = "0.11", features = ["json"] } 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
dotenvy = "0.15" 
chrono = "0.4" 
colored = "2"
url = "2.5"